# human_id

./: .gitignore  README.md  generate_dictionary.py  pyproject.toml
.github/workflows/: test.yml
human_id/: __init__.py  cli.py  dictionary.py
tests/: test_command.py  test_generate_id.py
