[tool.poetry]
name = "human_id"
version = "0.1.0"
description = "Human readable IDs, in Python"
authors = ["Tom Forbes <tom@tomforb.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-mock = "^3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
