[tool.poetry]
name = "human_id"
version = "0.1.0.post2"
description = "Human readable IDs, in Python"
authors = ["Tom Forbes <tom@tomforb.es>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-mock = "^3.1.0"
jinja2 = "^2.11.2"
pytest-black = "^0.3.9"

[tool.poetry.scripts]
humanid-gen = 'human_id.cli:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

